fix navbar height on mobile

--- a/media_query.css
+++ b/media_query.css
@@ -58,6 +58,9 @@
     width: auto;
     text-align: center;
   }
+  .none {
+    display: none;
+  }
   .unlist_ft {
     display: flex;
   }
